# MyChat

./: .gitignore  README.md
MyChatServer/src-c/: CMakeLists.txt
MyChatServer/src-c/Modules/: CMakeLists.txt
MyChatServer/src-c/Modules/Common/: CMakeLists.txt
MyChatServer/src-c/Modules/Common/include/: CommonDefines.h
MyChatServer/src-c/Modules/Run/: CMakeLists.txt
MyChatServer/src-c/Modules/Run/src/: main.cpp
MyChatServer/src-c/Modules/ServerKernel/: CMakeLists.txt
MyChatServer/src-c/Modules/ServerKernel/include/: Server.h
MyChatServer/src-c/Modules/ServerKernel/src/: Server.cpp
doc/: Basic_Architecture.md  Socket_Code.md
