file(GLOB COMMONDEFINES_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
file(GLOB COMMONDEFINES_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)


add_library(Common
${COMMONDEFINES_HEADER_FILES} ${COMMONDEFINES_SOURCE_FILES}
)


source_group(include FILES ${COMMONDEFINES_HEADER_FILES})
source_group(src FILES ${COMMONDEFINES_SOURCE_FILES})


set_target_properties(Common PROPERTIES FOLDER "modules")